--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <script src="classes.js"></script>
 <body oncontextmenu="return false">
 <button style="position: absolute; left: 24px; top: 84px;" onclick="reset();">Reset</button>
-<div style="position: absolute; left: 24px; top: 104px;"><input type="checkbox" id="collisions"><label>Collisions (Wonky)</label></div>
+<div style="position: absolute; left: 24px; top: 104px;"><input type="checkbox" id="collisions"><label style="color:#d7d7d7">Collisions (Wonky)</label></div>
 </body>
 </html>
