--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
 <script src="sketch.js"></script>
 <script src="classes.js"></script>
 <body oncontextmenu="return false">
-    <div id="Parameters" style="position: absolute; left: 12px; top: 12px; z-index: 5; color: #d7d7d7; height: 158px; width: 158px;" >
-        <input id="G" type="range" min="0.1" max="100" style="position: relative; left: 12px; top: 12px;">
-        <input id="Mass" type="range" min="0.1" max="8192" style="position: relative; left: 12px; top: 12px;">
-        <input id="Time" type="range" min="-40" max="48" style="position: relative; left: 12px; top: 12px;">
-        <input id="Trail" type="range" min="1" max="255" step="1" style="position: relative; left: 12px; top: 12px;">
-        <button style="position: relative; left: 12px; top: 12px; width: 132px;" onclick="reset();">Reset</button>
+    <div id="Info" style="font-family: Arial, Helvetica, sans-serif; color: #d7d7d7; padding: 12px; position: absolute; left: 12px; top: 236px; z-index: 5; outline: #d7d7d7 solid 4px; height: 304px; width: 344px;">
+        <button style="font-family: Arial, Helvetica, sans-serif; padding: 2px; padding-top: 0px; position: inherit; right: 2px; top: 2px; width: 16px; height: 16px;" onclick="closeInfo();">X</button>
+        This website is a simple 2D simulation of satellites orbiting Earth and the main problem that arises due to space debris.
+        <br><br>If an object collides with another object, it creates space debris. This space debris can then collide with more objects, creating more space debris.
+        <br><br>This concept is called Kessler Syndrome, and it will eventually make an orbit completely unusable for satellites due to the risk of collisions.
+        <br><br>Controls:
+        <br>Click and drag to create a new satellite.
+        <br>Press r to re-launch the last satellite.
+    </div>
+    <div id="Parameters" style="font-size: 12px; font-family: Arial, Helvetica, sans-serif; color: #d7d7d7; padding: 12px; position: absolute; left: 12px; top: 12px; z-index: 5; outline: #d7d7d7 solid 4px; height: 180px; width: 134px;" >
+        Gravitational Constant
+        <input id="G" type="range" min="0.1" max="100" style="position: relative; left: 0px; top: 0px;">
+        Earth Mass
+        <input id="Mass" type="range" min="0.1" max="8192" style="position: relative; left: 0px; top: 0px;">
+        Time Scale
+        <input id="Time" type="range" min="-40" max="48" style="position: relative; left: 0px; top: 0px;">
+        Trails
+        <input id="Trail" type="range" min="24" max="255" step="1" style="position: relative; left: 0px; top: 0px;">
+        <button style="position: relative; left: 0px; top: 0px; width: 132px;" onclick="reset();">Reset</button>
     </div>
 </body>
 </html>
